deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-go-api
  namespace: dev
  labels:
    app: simple-go-api
  annotations:
    description: "this is a simple go api"
spec:
  selector:
    matchLabels:
      app: simple-go-api
  replicas: 1
  template:
    metadata:
      labels:
        app: simple-go-api
    spec:
      containers:
      - name: simple-go-api
        image: joaovanzuita/simple-go-api:1.2
        ports:
        - containerPort: 7001
