deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-go-api-service
spec:
  selector:
    app: simple-go-api
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 7001
      protocol: TCP
